Update from https://github.com/thebesttv/eserver-static/commit/f98bb855b72e66658a13f2d194e094b7c0b37d5d

--- a/content/daily/2022-09-28.html
+++ b/content/daily/2022-09-28.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-22 19:03 -->
+<!-- 2022-10-23 02:56 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>保研回忆录</title>
@@ -36,19 +36,19 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgbb057f4">1. 暑假</a>
+<li><a href="#orgab3a5dc">1. 暑假</a>
 <ul>
-<li><a href="#org9083254">1.1. 夏令营</a></li>
+<li><a href="#org4adfd40">1.1. 夏令营</a></li>
 </ul>
 </li>
-<li><a href="#orgfa83edf">2. 打工</a></li>
-<li><a href="#org6facf72">3. 我的928</a>
+<li><a href="#orgb3b92f9">2. 打工</a></li>
+<li><a href="#org1c319de">3. 我的928</a>
 <ul>
-<li><a href="#orgcab0bfc">3.1. 928演唱会(bushi</a></li>
+<li><a href="#org7f75bc7">3.1. 928演唱会(bushi</a></li>
 </ul>
 </li>
-<li><a href="#org8d798d5">4. 他们的928</a></li>
-<li><a href="#org0e11f4e">5. 总结</a></li>
+<li><a href="#org64766ff">4. 他们的928</a></li>
+<li><a href="#org90557d7">5. 总结</a></li>
 </ul>
 </div>
 </nav>
@@ -58,7 +58,7 @@
 </p>
 
 
-<figure id="org75aeae7">
+<figure id="org59b6ef8">
 <img src="2022-09-28/928-nju.jpg" alt="928-nju.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 1: </span>南大offer</figcaption>
@@ -81,8 +81,8 @@
 <li><a href="http://www.cskaoyan.com/thread-237791-1-1.html">中科院计算所实验室情况简要介绍</a></li>
 </ul>
 
-<div id="outline-container-orgbb057f4" class="outline-2">
-<h2 id="orgbb057f4"><span class="section-number-2">1.</span> <a href="#orgbb057f4">暑假</a></h2>
+<div id="outline-container-orgab3a5dc" class="outline-2">
+<h2 id="orgab3a5dc"><span class="section-number-2">1.</span> <a href="#orgab3a5dc">暑假</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 夏令营之前我是很想去计算所学体系结构的,
@@ -106,8 +106,8 @@
 </p>
 </div>
 
-<div id="outline-container-org9083254" class="outline-3">
-<h3 id="org9083254"><span class="section-number-3">1.1.</span> <a href="#org9083254">夏令营</a></h3>
+<div id="outline-container-org4adfd40" class="outline-3">
+<h3 id="org4adfd40"><span class="section-number-3">1.1.</span> <a href="#org4adfd40">夏令营</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 被直接拒的学校
@@ -149,8 +149,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgfa83edf" class="outline-2">
-<h2 id="orgfa83edf"><span class="section-number-2">2.</span> <a href="#orgfa83edf">打工</a></h2>
+<div id="outline-container-orgb3b92f9" class="outline-2">
+<h2 id="orgb3b92f9"><span class="section-number-2">2.</span> <a href="#orgb3b92f9">打工</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 跟了wy之后就开始学静态分析了, 还是继续看三下没看完的南大程序分析课,
@@ -164,8 +164,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org6facf72" class="outline-2">
-<h2 id="org6facf72"><span class="section-number-2">3.</span> <a href="#org6facf72">我的928</a></h2>
+<div id="outline-container-org1c319de" class="outline-2">
+<h2 id="org1c319de"><span class="section-number-2">3.</span> <a href="#org1c319de">我的928</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 928还算平静, 照着群里的通知一步步做就行了.
@@ -181,8 +181,8 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 </div>
 
-<div id="outline-container-orgcab0bfc" class="outline-3">
-<h3 id="orgcab0bfc"><span class="section-number-3">3.1.</span> <a href="#orgcab0bfc">928演唱会(bushi</a></h3>
+<div id="outline-container-org7f75bc7" class="outline-3">
+<h3 id="org7f75bc7"><span class="section-number-3">3.1.</span> <a href="#org7f75bc7">928演唱会(bushi</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 演唱会是在二运开的, 和jdh一起去听着玩, 一开始因为没有门票被挡在外面,
@@ -190,7 +190,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org018881a">
+<figure id="org075f8aa">
 <img src="2022-09-28/outside.jpg" alt="outside.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 2: </span>被挡在外面</figcaption>
@@ -202,7 +202,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org6ebdb26">
+<figure id="org45e7740">
 <img src="2022-09-28/auditorium.jpg" alt="auditorium.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 3: </span>在观众席上</figcaption>
@@ -215,8 +215,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org8d798d5" class="outline-2">
-<h2 id="org8d798d5"><span class="section-number-2">4.</span> <a href="#org8d798d5">他们的928</a></h2>
+<div id="outline-container-org64766ff" class="outline-2">
+<h2 id="org64766ff"><span class="section-number-2">4.</span> <a href="#org64766ff">他们的928</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>翔去了复旦NLP</li>
@@ -236,8 +236,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org0e11f4e" class="outline-2">
-<h2 id="org0e11f4e"><span class="section-number-2">5.</span> <a href="#org0e11f4e">总结</a></h2>
+<div id="outline-container-org90557d7" class="outline-2">
+<h2 id="org90557d7"><span class="section-number-2">5.</span> <a href="#org90557d7">总结</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 保研最难的两关都过了, 也貌似遇到了不错的导师.
@@ -252,7 +252,7 @@ p.s. IDEA 写 Java 是真的方便
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-28 16:27</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 10:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-22 19:03</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-23 02:56</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2022-09-28.org">content/daily/2022-09-28.org</a></td></tr>
 </table>
