--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-22 19:03 -->
+<!-- 2022-10-23 02:56 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -36,47 +36,47 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org46b0c49">1. 妙妙文章</a>
+<li><a href="#org463c995">1. 妙妙文章</a>
 <ul>
-<li><a href="#orgc998f14">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
-<li><a href="#org1eb419c">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#org31ff6b9">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#org73a86b3">1.4. 关于编辑器</a></li>
-<li><a href="#org2c87f53">1.5. 关于代码</a>
+<li><a href="#org423f33a">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
+<li><a href="#org1fcedd8">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#org5b76d7c">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#orgf173140">1.4. 关于编辑器</a></li>
+<li><a href="#org57c92d8">1.5. 关于代码</a>
 <ul>
-<li><a href="#org1c72d41">1.5.1. Lisp</a></li>
+<li><a href="#org9e693ad">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#org45c7c23">1.6. 关于CPU</a></li>
-<li><a href="#org98404cb">1.7. 关于算法</a>
+<li><a href="#orgd0bc3db">1.6. 关于CPU</a></li>
+<li><a href="#org4d3bf31">1.7. 关于算法</a>
 <ul>
-<li><a href="#org7c6b71a">1.7.1. 关于随机</a></li>
+<li><a href="#orge92a348">1.7.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#org6947033">1.8. 关于AI</a></li>
-<li><a href="#orgbafef33">1.9. 关于软件</a>
+<li><a href="#org22741ad">1.8. 关于AI</a></li>
+<li><a href="#org89a90ad">1.9. 关于软件</a>
 <ul>
-<li><a href="#org892bad0">1.9.1. SQLite</a></li>
+<li><a href="#org7a005d3">1.9.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#orgedd2ec8">1.10. 关于workflow</a></li>
+<li><a href="#orge4c3a3e">1.10. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#org351b874">2. 棒棒视频</a>
+<li><a href="#org88517e3">2. 棒棒视频</a>
 <ul>
-<li><a href="#org2cb2c03">2.1. Veritasium 真理元素</a></li>
-<li><a href="#orgbb36fdf">2.2. 各种剧</a></li>
-<li><a href="#org4d13f7d">2.3. 电影</a></li>
+<li><a href="#orgf879bb2">2.1. Veritasium 真理元素</a></li>
+<li><a href="#orgf51ef69">2.2. 各种剧</a></li>
+<li><a href="#orgaef18f6">2.3. 电影</a></li>
 </ul>
 </li>
-<li><a href="#org7d36e5c">3. 快乐游戏</a></li>
-<li><a href="#org1a32d38">4. 宝藏博主</a></li>
-<li><a href="#org1e7f98c">5. 有意思的</a>
+<li><a href="#orga6c63cb">3. 快乐游戏</a></li>
+<li><a href="#org94ed277">4. 宝藏博主</a></li>
+<li><a href="#org5a20ef7">5. 有意思的</a>
 <ul>
-<li><a href="#org3eb30fb">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#orgfa38dbb">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#org32425ea">6. 我想玩的</a></li>
+<li><a href="#org2f39f12">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -85,8 +85,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-org46b0c49" class="outline-2">
-<h2 id="org46b0c49"><span class="section-number-2">1.</span> <a href="#org46b0c49">妙妙文章</a></h2>
+<div id="outline-container-org463c995" class="outline-2">
+<h2 id="org463c995"><span class="section-number-2">1.</span> <a href="#org463c995">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -423,7 +423,7 @@ cards until the game is over.
 有好看的鸟鸟~
 </p>
 
-<figure id="orgad2d67d">
+<figure id="org4510a37">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -485,8 +485,8 @@ Take Umbrage.  Violators Will &#x2026;
 </ul>
 </div>
 
-<div id="outline-container-orgc998f14" class="outline-3">
-<h3 id="orgc998f14"><span class="section-number-3">1.1.</span> <a href="#orgc998f14">关于死亡 &#x2014; 让世界知道我来过</a></h3>
+<div id="outline-container-org423f33a" class="outline-3">
+<h3 id="org423f33a"><span class="section-number-3">1.1.</span> <a href="#org423f33a">关于死亡 &#x2014; 让世界知道我来过</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -527,8 +527,8 @@ Take Umbrage.  Violators Will &#x2026;
 </div>
 </div>
 
-<div id="outline-container-org1eb419c" class="outline-3">
-<h3 id="org1eb419c"><span class="section-number-3">1.2.</span> <a href="#org1eb419c">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-org1fcedd8" class="outline-3">
+<h3 id="org1fcedd8"><span class="section-number-3">1.2.</span> <a href="#org1fcedd8">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><p>
@@ -558,8 +558,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-org31ff6b9" class="outline-3">
-<h3 id="org31ff6b9"><span class="section-number-3">1.3.</span> <a href="#org31ff6b9">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-org5b76d7c" class="outline-3">
+<h3 id="org5b76d7c"><span class="section-number-3">1.3.</span> <a href="#org5b76d7c">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -593,8 +593,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-org73a86b3" class="outline-3">
-<h3 id="org73a86b3"><span class="section-number-3">1.4.</span> <a href="#org73a86b3">关于编辑器</a></h3>
+<div id="outline-container-orgf173140" class="outline-3">
+<h3 id="orgf173140"><span class="section-number-3">1.4.</span> <a href="#orgf173140">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><p>
@@ -610,8 +610,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-org2c87f53" class="outline-3">
-<h3 id="org2c87f53"><span class="section-number-3">1.5.</span> <a href="#org2c87f53">关于代码</a></h3>
+<div id="outline-container-org57c92d8" class="outline-3">
+<h3 id="org57c92d8"><span class="section-number-3">1.5.</span> <a href="#org57c92d8">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don&rsquo;t read code like it&rsquo;s a
@@ -636,8 +636,8 @@ future.</li>
 </ul>
 </div>
 
-<div id="outline-container-org1c72d41" class="outline-4">
-<h4 id="org1c72d41"><span class="section-number-4">1.5.1.</span> <a href="#org1c72d41">Lisp</a></h4>
+<div id="outline-container-org9e693ad" class="outline-4">
+<h4 id="org9e693ad"><span class="section-number-4">1.5.1.</span> <a href="#org9e693ad">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -660,8 +660,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-org45c7c23" class="outline-3">
-<h3 id="org45c7c23"><span class="section-number-3">1.6.</span> <a href="#org45c7c23">关于CPU</a></h3>
+<div id="outline-container-orgd0bc3db" class="outline-3">
+<h3 id="orgd0bc3db"><span class="section-number-3">1.6.</span> <a href="#orgd0bc3db">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><p>
@@ -676,8 +676,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </div>
 </div>
 
-<div id="outline-container-org98404cb" class="outline-3">
-<h3 id="org98404cb"><span class="section-number-3">1.7.</span> <a href="#org98404cb">关于算法</a></h3>
+<div id="outline-container-org4d3bf31" class="outline-3">
+<h3 id="org4d3bf31"><span class="section-number-3">1.7.</span> <a href="#org4d3bf31">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -696,8 +696,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-org7c6b71a" class="outline-4">
-<h4 id="org7c6b71a"><span class="section-number-4">1.7.1.</span> <a href="#org7c6b71a">关于随机</a></h4>
+<div id="outline-container-orge92a348" class="outline-4">
+<h4 id="orge92a348"><span class="section-number-4">1.7.1.</span> <a href="#orge92a348">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-7-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -711,8 +711,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org6947033" class="outline-3">
-<h3 id="org6947033"><span class="section-number-3">1.8.</span> <a href="#org6947033">关于AI</a></h3>
+<div id="outline-container-org22741ad" class="outline-3">
+<h3 id="org22741ad"><span class="section-number-3">1.8.</span> <a href="#org22741ad">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -722,8 +722,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgbafef33" class="outline-3">
-<h3 id="orgbafef33"><span class="section-number-3">1.9.</span> <a href="#orgbafef33">关于软件</a></h3>
+<div id="outline-container-org89a90ad" class="outline-3">
+<h3 id="org89a90ad"><span class="section-number-3">1.9.</span> <a href="#org89a90ad">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -734,8 +734,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-org892bad0" class="outline-4">
-<h4 id="org892bad0"><span class="section-number-4">1.9.1.</span> <a href="#org892bad0">SQLite</a></h4>
+<div id="outline-container-org7a005d3" class="outline-4">
+<h4 id="org7a005d3"><span class="section-number-4">1.9.1.</span> <a href="#org7a005d3">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-9-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -749,8 +749,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgedd2ec8" class="outline-3">
-<h3 id="orgedd2ec8"><span class="section-number-3">1.10.</span> <a href="#orgedd2ec8">关于workflow</a></h3>
+<div id="outline-container-orge4c3a3e" class="outline-3">
+<h3 id="orge4c3a3e"><span class="section-number-3">1.10.</span> <a href="#orge4c3a3e">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-10">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -760,8 +760,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org351b874" class="outline-2">
-<h2 id="org351b874"><span class="section-number-2">2.</span> <a href="#org351b874">棒棒视频</a></h2>
+<div id="outline-container-org88517e3" class="outline-2">
+<h2 id="org88517e3"><span class="section-number-2">2.</span> <a href="#org88517e3">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -816,8 +816,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-org2cb2c03" class="outline-3">
-<h3 id="org2cb2c03"><span class="section-number-3">2.1.</span> <a href="#org2cb2c03">Veritasium 真理元素</a></h3>
+<div id="outline-container-orgf879bb2" class="outline-3">
+<h3 id="orgf879bb2"><span class="section-number-3">2.1.</span> <a href="#orgf879bb2">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You&rsquo;ve Never Heard Of</a>
@@ -842,8 +842,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgbb36fdf" class="outline-3">
-<h3 id="orgbb36fdf"><span class="section-number-3">2.2.</span> <a href="#orgbb36fdf">各种剧</a></h3>
+<div id="outline-container-orgf51ef69" class="outline-3">
+<h3 id="orgf51ef69"><span class="section-number-3">2.2.</span> <a href="#orgf51ef69">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -867,8 +867,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org4d13f7d" class="outline-3">
-<h3 id="org4d13f7d"><span class="section-number-3">2.3.</span> <a href="#org4d13f7d">电影</a></h3>
+<div id="outline-container-orgaef18f6" class="outline-3">
+<h3 id="orgaef18f6"><span class="section-number-3">2.3.</span> <a href="#orgaef18f6">电影</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -894,8 +894,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org7d36e5c" class="outline-2">
-<h2 id="org7d36e5c"><span class="section-number-2">3.</span> <a href="#org7d36e5c">快乐游戏</a></h2>
+<div id="outline-container-orga6c63cb" class="outline-2">
+<h2 id="orga6c63cb"><span class="section-number-2">3.</span> <a href="#orga6c63cb">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -925,8 +925,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org1a32d38" class="outline-2">
-<h2 id="org1a32d38"><span class="section-number-2">4.</span> <a href="#org1a32d38">宝藏博主</a></h2>
+<div id="outline-container-org94ed277" class="outline-2">
+<h2 id="org94ed277"><span class="section-number-2">4.</span> <a href="#org94ed277">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -937,7 +937,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://collet66.web.fc2.com/">Syosa&rsquo;s Room</a> 画了很多像素花, 鸟, 狗
 </p>
 
-<figure id="org736fa29">
+<figure id="orgcd55ab8">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -945,8 +945,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org1e7f98c" class="outline-2">
-<h2 id="org1e7f98c"><span class="section-number-2">5.</span> <a href="#org1e7f98c">有意思的</a></h2>
+<div id="outline-container-org5a20ef7" class="outline-2">
+<h2 id="org5a20ef7"><span class="section-number-2">5.</span> <a href="#org5a20ef7">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -978,8 +978,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-org3eb30fb" class="outline-3">
-<h3 id="org3eb30fb"><span class="section-number-3">5.1.</span> <a href="#org3eb30fb">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-orgfa38dbb" class="outline-3">
+<h3 id="orgfa38dbb"><span class="section-number-3">5.1.</span> <a href="#orgfa38dbb">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -991,8 +991,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-org32425ea" class="outline-2">
-<h2 id="org32425ea"><span class="section-number-2">6.</span> <a href="#org32425ea">我想玩的</a></h2>
+<div id="outline-container-org2f39f12" class="outline-2">
+<h2 id="org2f39f12"><span class="section-number-2">6.</span> <a href="#org2f39f12">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -1015,7 +1015,7 @@ Always check your friendship before terminating it.  hhhh</li>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:10</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-21 09:58</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-22 19:03</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-23 02:56</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
