Update from https://github.com/thebesttv/eserver-static/commit/f56fbdba4493cdcf0783f58ee3ada1b6b0740d17

--- a/content/daily/2022-09-28.html
+++ b/content/daily/2022-09-28.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-23 21:25 -->
+<!-- 2022-10-25 03:07 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>保研回忆录</title>
@@ -36,19 +36,19 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org835f23b">1. 暑假</a>
+<li><a href="#org2633919">1. 暑假</a>
 <ul>
-<li><a href="#org1a4cc88">1.1. 夏令营</a></li>
+<li><a href="#org5e97054">1.1. 夏令营</a></li>
 </ul>
 </li>
-<li><a href="#orge2dd211">2. 打工</a></li>
-<li><a href="#orge2248bd">3. 我的928</a>
+<li><a href="#org84a77a8">2. 打工</a></li>
+<li><a href="#orgba5e39c">3. 我的928</a>
 <ul>
-<li><a href="#org0082937">3.1. 928演唱会(bushi</a></li>
+<li><a href="#org226ec7d">3.1. 928演唱会(bushi</a></li>
 </ul>
 </li>
-<li><a href="#org3a7ccbe">4. 他们的928</a></li>
-<li><a href="#org69bb009">5. 总结</a></li>
+<li><a href="#orga1b628b">4. 他们的928</a></li>
+<li><a href="#org0f7d532">5. 总结</a></li>
 </ul>
 </div>
 </nav>
@@ -58,7 +58,7 @@
 </p>
 
 
-<figure id="org197a7f9">
+<figure id="org284ee40">
 <img src="2022-09-28/928-nju.jpg" alt="928-nju.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 1: </span>南大offer</figcaption>
@@ -81,8 +81,8 @@
 <li><a href="http://www.cskaoyan.com/thread-237791-1-1.html">中科院计算所实验室情况简要介绍</a></li>
 </ul>
 
-<div id="outline-container-org835f23b" class="outline-2">
-<h2 id="org835f23b"><span class="section-number-2">1.</span> <a href="#org835f23b">暑假</a></h2>
+<div id="outline-container-org2633919" class="outline-2">
+<h2 id="org2633919"><span class="section-number-2">1.</span> <a href="#org2633919">暑假</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 夏令营之前我是很想去计算所学体系结构的,
@@ -106,8 +106,8 @@
 </p>
 </div>
 
-<div id="outline-container-org1a4cc88" class="outline-3">
-<h3 id="org1a4cc88"><span class="section-number-3">1.1.</span> <a href="#org1a4cc88">夏令营</a></h3>
+<div id="outline-container-org5e97054" class="outline-3">
+<h3 id="org5e97054"><span class="section-number-3">1.1.</span> <a href="#org5e97054">夏令营</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 被直接拒的学校
@@ -149,8 +149,8 @@
 </div>
 </div>
 
-<div id="outline-container-orge2dd211" class="outline-2">
-<h2 id="orge2dd211"><span class="section-number-2">2.</span> <a href="#orge2dd211">打工</a></h2>
+<div id="outline-container-org84a77a8" class="outline-2">
+<h2 id="org84a77a8"><span class="section-number-2">2.</span> <a href="#org84a77a8">打工</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 跟了wy之后就开始学静态分析了, 还是继续看三下没看完的南大程序分析课,
@@ -164,8 +164,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orge2248bd" class="outline-2">
-<h2 id="orge2248bd"><span class="section-number-2">3.</span> <a href="#orge2248bd">我的928</a></h2>
+<div id="outline-container-orgba5e39c" class="outline-2">
+<h2 id="orgba5e39c"><span class="section-number-2">3.</span> <a href="#orgba5e39c">我的928</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 928还算平静, 照着群里的通知一步步做就行了.
@@ -181,8 +181,8 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 </div>
 
-<div id="outline-container-org0082937" class="outline-3">
-<h3 id="org0082937"><span class="section-number-3">3.1.</span> <a href="#org0082937">928演唱会(bushi</a></h3>
+<div id="outline-container-org226ec7d" class="outline-3">
+<h3 id="org226ec7d"><span class="section-number-3">3.1.</span> <a href="#org226ec7d">928演唱会(bushi</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 演唱会是在二运开的, 和jdh一起去听着玩, 一开始因为没有门票被挡在外面,
@@ -190,7 +190,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org104909b">
+<figure id="orga19dcdd">
 <img src="2022-09-28/outside.jpg" alt="outside.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 2: </span>被挡在外面</figcaption>
@@ -202,7 +202,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="orgd3e5578">
+<figure id="org5bbbcf8">
 <img src="2022-09-28/auditorium.jpg" alt="auditorium.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 3: </span>在观众席上</figcaption>
@@ -215,8 +215,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org3a7ccbe" class="outline-2">
-<h2 id="org3a7ccbe"><span class="section-number-2">4.</span> <a href="#org3a7ccbe">他们的928</a></h2>
+<div id="outline-container-orga1b628b" class="outline-2">
+<h2 id="orga1b628b"><span class="section-number-2">4.</span> <a href="#orga1b628b">他们的928</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>翔去了复旦NLP</li>
@@ -236,8 +236,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org69bb009" class="outline-2">
-<h2 id="org69bb009"><span class="section-number-2">5.</span> <a href="#org69bb009">总结</a></h2>
+<div id="outline-container-org0f7d532" class="outline-2">
+<h2 id="org0f7d532"><span class="section-number-2">5.</span> <a href="#org0f7d532">总结</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 保研最难的两关都过了, 也貌似遇到了不错的导师.
@@ -252,7 +252,7 @@ p.s. IDEA 写 Java 是真的方便
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-28 16:27</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 10:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-23 21:25</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-25 03:07</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2022-09-28.org">content/daily/2022-09-28.org</a></td></tr>
 </table>
