--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-23 21:25 -->
+<!-- 2022-10-25 03:07 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -36,47 +36,47 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgeabae25">1. 妙妙文章</a>
+<li><a href="#org31bf328">1. 妙妙文章</a>
 <ul>
-<li><a href="#orge130408">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
-<li><a href="#orgf4dcaac">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#org43c8ae6">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#orge177eb5">1.4. 关于编辑器</a></li>
-<li><a href="#orgbd63ae6">1.5. 关于代码</a>
+<li><a href="#orgd92437e">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
+<li><a href="#orgb81828f">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#org30d9a27">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#org677b7f5">1.4. 关于编辑器</a></li>
+<li><a href="#orgfba7ad4">1.5. 关于代码</a>
 <ul>
-<li><a href="#orgbf62681">1.5.1. Lisp</a></li>
+<li><a href="#orgf2df204">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#org0c9cde9">1.6. 关于CPU</a></li>
-<li><a href="#org34d5fc3">1.7. 关于算法</a>
+<li><a href="#orga8dc3b1">1.6. 关于CPU</a></li>
+<li><a href="#orgdff58ba">1.7. 关于算法</a>
 <ul>
-<li><a href="#org2e6d032">1.7.1. 关于随机</a></li>
+<li><a href="#orgc6fd8de">1.7.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#orge48b54f">1.8. 关于AI</a></li>
-<li><a href="#orgd193157">1.9. 关于软件</a>
+<li><a href="#orgd4d7f13">1.8. 关于AI</a></li>
+<li><a href="#orge268b8f">1.9. 关于软件</a>
 <ul>
-<li><a href="#orgc980862">1.9.1. SQLite</a></li>
+<li><a href="#orga4312e9">1.9.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#org7c13020">1.10. 关于workflow</a></li>
+<li><a href="#org176dee9">1.10. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#orgf1ef00c">2. 棒棒视频</a>
+<li><a href="#org6116451">2. 棒棒视频</a>
 <ul>
-<li><a href="#orga69dd53">2.1. Veritasium 真理元素</a></li>
-<li><a href="#orgfee8a27">2.2. 各种剧</a></li>
-<li><a href="#orgaf6ecd9">2.3. 电影</a></li>
+<li><a href="#org0d6ff01">2.1. Veritasium 真理元素</a></li>
+<li><a href="#org8f89e6b">2.2. 各种剧</a></li>
+<li><a href="#org0973214">2.3. 电影</a></li>
 </ul>
 </li>
-<li><a href="#org44a80d2">3. 快乐游戏</a></li>
-<li><a href="#orga098301">4. 宝藏博主</a></li>
-<li><a href="#orge10548e">5. 有意思的</a>
+<li><a href="#orgaa1f96c">3. 快乐游戏</a></li>
+<li><a href="#org5bcef6e">4. 宝藏博主</a></li>
+<li><a href="#orgae7b1f0">5. 有意思的</a>
 <ul>
-<li><a href="#orga9366ff">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#org45ff506">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#org7cbb374">6. 我想玩的</a></li>
+<li><a href="#org7a6347d">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -85,8 +85,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-orgeabae25" class="outline-2">
-<h2 id="orgeabae25"><span class="section-number-2">1.</span> <a href="#orgeabae25">妙妙文章</a></h2>
+<div id="outline-container-org31bf328" class="outline-2">
+<h2 id="org31bf328"><span class="section-number-2">1.</span> <a href="#org31bf328">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -423,7 +423,7 @@ cards until the game is over.
 有好看的鸟鸟~
 </p>
 
-<figure id="org8f4fef4">
+<figure id="orgae3778e">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -485,8 +485,8 @@ Take Umbrage.  Violators Will &#x2026;
 </ul>
 </div>
 
-<div id="outline-container-orge130408" class="outline-3">
-<h3 id="orge130408"><span class="section-number-3">1.1.</span> <a href="#orge130408">关于死亡 &#x2014; 让世界知道我来过</a></h3>
+<div id="outline-container-orgd92437e" class="outline-3">
+<h3 id="orgd92437e"><span class="section-number-3">1.1.</span> <a href="#orgd92437e">关于死亡 &#x2014; 让世界知道我来过</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -527,8 +527,8 @@ Take Umbrage.  Violators Will &#x2026;
 </div>
 </div>
 
-<div id="outline-container-orgf4dcaac" class="outline-3">
-<h3 id="orgf4dcaac"><span class="section-number-3">1.2.</span> <a href="#orgf4dcaac">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-orgb81828f" class="outline-3">
+<h3 id="orgb81828f"><span class="section-number-3">1.2.</span> <a href="#orgb81828f">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><p>
@@ -558,8 +558,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-org43c8ae6" class="outline-3">
-<h3 id="org43c8ae6"><span class="section-number-3">1.3.</span> <a href="#org43c8ae6">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-org30d9a27" class="outline-3">
+<h3 id="org30d9a27"><span class="section-number-3">1.3.</span> <a href="#org30d9a27">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -593,8 +593,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-orge177eb5" class="outline-3">
-<h3 id="orge177eb5"><span class="section-number-3">1.4.</span> <a href="#orge177eb5">关于编辑器</a></h3>
+<div id="outline-container-org677b7f5" class="outline-3">
+<h3 id="org677b7f5"><span class="section-number-3">1.4.</span> <a href="#org677b7f5">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><p>
@@ -610,8 +610,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-orgbd63ae6" class="outline-3">
-<h3 id="orgbd63ae6"><span class="section-number-3">1.5.</span> <a href="#orgbd63ae6">关于代码</a></h3>
+<div id="outline-container-orgfba7ad4" class="outline-3">
+<h3 id="orgfba7ad4"><span class="section-number-3">1.5.</span> <a href="#orgfba7ad4">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don&rsquo;t read code like it&rsquo;s a
@@ -636,8 +636,8 @@ future.</li>
 </ul>
 </div>
 
-<div id="outline-container-orgbf62681" class="outline-4">
-<h4 id="orgbf62681"><span class="section-number-4">1.5.1.</span> <a href="#orgbf62681">Lisp</a></h4>
+<div id="outline-container-orgf2df204" class="outline-4">
+<h4 id="orgf2df204"><span class="section-number-4">1.5.1.</span> <a href="#orgf2df204">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -660,8 +660,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-org0c9cde9" class="outline-3">
-<h3 id="org0c9cde9"><span class="section-number-3">1.6.</span> <a href="#org0c9cde9">关于CPU</a></h3>
+<div id="outline-container-orga8dc3b1" class="outline-3">
+<h3 id="orga8dc3b1"><span class="section-number-3">1.6.</span> <a href="#orga8dc3b1">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><p>
@@ -676,8 +676,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </div>
 </div>
 
-<div id="outline-container-org34d5fc3" class="outline-3">
-<h3 id="org34d5fc3"><span class="section-number-3">1.7.</span> <a href="#org34d5fc3">关于算法</a></h3>
+<div id="outline-container-orgdff58ba" class="outline-3">
+<h3 id="orgdff58ba"><span class="section-number-3">1.7.</span> <a href="#orgdff58ba">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -696,8 +696,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-org2e6d032" class="outline-4">
-<h4 id="org2e6d032"><span class="section-number-4">1.7.1.</span> <a href="#org2e6d032">关于随机</a></h4>
+<div id="outline-container-orgc6fd8de" class="outline-4">
+<h4 id="orgc6fd8de"><span class="section-number-4">1.7.1.</span> <a href="#orgc6fd8de">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-7-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -711,8 +711,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orge48b54f" class="outline-3">
-<h3 id="orge48b54f"><span class="section-number-3">1.8.</span> <a href="#orge48b54f">关于AI</a></h3>
+<div id="outline-container-orgd4d7f13" class="outline-3">
+<h3 id="orgd4d7f13"><span class="section-number-3">1.8.</span> <a href="#orgd4d7f13">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -722,8 +722,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgd193157" class="outline-3">
-<h3 id="orgd193157"><span class="section-number-3">1.9.</span> <a href="#orgd193157">关于软件</a></h3>
+<div id="outline-container-orge268b8f" class="outline-3">
+<h3 id="orge268b8f"><span class="section-number-3">1.9.</span> <a href="#orge268b8f">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -734,8 +734,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-orgc980862" class="outline-4">
-<h4 id="orgc980862"><span class="section-number-4">1.9.1.</span> <a href="#orgc980862">SQLite</a></h4>
+<div id="outline-container-orga4312e9" class="outline-4">
+<h4 id="orga4312e9"><span class="section-number-4">1.9.1.</span> <a href="#orga4312e9">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-9-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -749,8 +749,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org7c13020" class="outline-3">
-<h3 id="org7c13020"><span class="section-number-3">1.10.</span> <a href="#org7c13020">关于workflow</a></h3>
+<div id="outline-container-org176dee9" class="outline-3">
+<h3 id="org176dee9"><span class="section-number-3">1.10.</span> <a href="#org176dee9">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-10">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -760,8 +760,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgf1ef00c" class="outline-2">
-<h2 id="orgf1ef00c"><span class="section-number-2">2.</span> <a href="#orgf1ef00c">棒棒视频</a></h2>
+<div id="outline-container-org6116451" class="outline-2">
+<h2 id="org6116451"><span class="section-number-2">2.</span> <a href="#org6116451">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -816,8 +816,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-orga69dd53" class="outline-3">
-<h3 id="orga69dd53"><span class="section-number-3">2.1.</span> <a href="#orga69dd53">Veritasium 真理元素</a></h3>
+<div id="outline-container-org0d6ff01" class="outline-3">
+<h3 id="org0d6ff01"><span class="section-number-3">2.1.</span> <a href="#org0d6ff01">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You&rsquo;ve Never Heard Of</a>
@@ -842,8 +842,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgfee8a27" class="outline-3">
-<h3 id="orgfee8a27"><span class="section-number-3">2.2.</span> <a href="#orgfee8a27">各种剧</a></h3>
+<div id="outline-container-org8f89e6b" class="outline-3">
+<h3 id="org8f89e6b"><span class="section-number-3">2.2.</span> <a href="#org8f89e6b">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -867,8 +867,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgaf6ecd9" class="outline-3">
-<h3 id="orgaf6ecd9"><span class="section-number-3">2.3.</span> <a href="#orgaf6ecd9">电影</a></h3>
+<div id="outline-container-org0973214" class="outline-3">
+<h3 id="org0973214"><span class="section-number-3">2.3.</span> <a href="#org0973214">电影</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -903,8 +903,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org44a80d2" class="outline-2">
-<h2 id="org44a80d2"><span class="section-number-2">3.</span> <a href="#org44a80d2">快乐游戏</a></h2>
+<div id="outline-container-orgaa1f96c" class="outline-2">
+<h2 id="orgaa1f96c"><span class="section-number-2">3.</span> <a href="#orgaa1f96c">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -934,8 +934,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orga098301" class="outline-2">
-<h2 id="orga098301"><span class="section-number-2">4.</span> <a href="#orga098301">宝藏博主</a></h2>
+<div id="outline-container-org5bcef6e" class="outline-2">
+<h2 id="org5bcef6e"><span class="section-number-2">4.</span> <a href="#org5bcef6e">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -946,7 +946,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://collet66.web.fc2.com/">Syosa&rsquo;s Room</a> 画了很多像素花, 鸟, 狗
 </p>
 
-<figure id="org26191de">
+<figure id="org4b3cbb0">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -954,8 +954,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orge10548e" class="outline-2">
-<h2 id="orge10548e"><span class="section-number-2">5.</span> <a href="#orge10548e">有意思的</a></h2>
+<div id="outline-container-orgae7b1f0" class="outline-2">
+<h2 id="orgae7b1f0"><span class="section-number-2">5.</span> <a href="#orgae7b1f0">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -987,8 +987,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-orga9366ff" class="outline-3">
-<h3 id="orga9366ff"><span class="section-number-3">5.1.</span> <a href="#orga9366ff">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-org45ff506" class="outline-3">
+<h3 id="org45ff506"><span class="section-number-3">5.1.</span> <a href="#org45ff506">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -1000,8 +1000,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-org7cbb374" class="outline-2">
-<h2 id="org7cbb374"><span class="section-number-2">6.</span> <a href="#org7cbb374">我想玩的</a></h2>
+<div id="outline-container-org7a6347d" class="outline-2">
+<h2 id="org7a6347d"><span class="section-number-2">6.</span> <a href="#org7a6347d">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -1024,7 +1024,7 @@ Always check your friendship before terminating it.  hhhh</li>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:10</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-23 21:24</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-23 21:25</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-25 03:07</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
