--- a/content/collections/life-tips.html
+++ b/content/collections/life-tips.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-23 21:25 -->
+<!-- 2022-10-25 03:07 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>生活小贴士</title>
@@ -39,7 +39,7 @@
 便利贴应该从侧面撕~
 </p>
 
-<figure id="orgc7a27f8">
+<figure id="org4b91ab3">
 <img src="./life-tips/peel-a-post-it.jpg" alt="peel-a-post-it.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -50,7 +50,7 @@
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-10-22 18:55</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-22 19:02</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-23 21:25</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-25 03:07</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/life-tips.org">content/collections/life-tips.org</a></td></tr>
 </table>
