--- a/content/daily/2021-05-19.html
+++ b/content/daily/2021-05-19.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-23 21:25 -->
+<!-- 2022-10-25 03:07 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>不知道要写啥的第二篇日记</title>
@@ -36,17 +36,17 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org1b080b7">1. 一大早</a></li>
-<li><a href="#orge1ae186">2. 然后是剩下的无趣一天🙃</a></li>
-<li><a href="#org61d10b6">3. 科研训练</a></li>
-<li><a href="#org0828358">4. 520</a></li>
+<li><a href="#org732a74f">1. 一大早</a></li>
+<li><a href="#org590e1e5">2. 然后是剩下的无趣一天🙃</a></li>
+<li><a href="#orgdf7a246">3. 科研训练</a></li>
+<li><a href="#orgb742f05">4. 520</a></li>
 </ul>
 </div>
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-org1b080b7" class="outline-2">
-<h2 id="org1b080b7"><span class="section-number-2">1.</span> <a href="#org1b080b7">一大早</a></h2>
+<div id="outline-container-org732a74f" class="outline-2">
+<h2 id="org732a74f"><span class="section-number-2">1.</span> <a href="#org732a74f">一大早</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 概统八点半才上课，现在在宿舍干脆干点啥。 给博客加上了一个
@@ -55,8 +55,8 @@
 </div>
 </div>
 
-<div id="outline-container-orge1ae186" class="outline-2">
-<h2 id="orge1ae186"><span class="section-number-2">2.</span> <a href="#orge1ae186">然后是剩下的无趣一天🙃</a></h2>
+<div id="outline-container-org590e1e5" class="outline-2">
+<h2 id="org590e1e5"><span class="section-number-2">2.</span> <a href="#org590e1e5">然后是剩下的无趣一天🙃</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 下午数电实验，回宿舍了才发现U盘忘拿了……结果一共撑着伞在雨里走了三趟……
@@ -82,8 +82,8 @@
 </div>
 </div>
 
-<div id="outline-container-org61d10b6" class="outline-2">
-<h2 id="org61d10b6"><span class="section-number-2">3.</span> <a href="#org61d10b6">科研训练</a></h2>
+<div id="outline-container-orgdf7a246" class="outline-2">
+<h2 id="orgdf7a246"><span class="section-number-2">3.</span> <a href="#orgdf7a246">科研训练</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 哦对了，下午数电实验结束去找了学长，弄了弄科研训练的事情，大概就是一年弄出篇文章的样子。
@@ -91,8 +91,8 @@
 </div>
 </div>
 
-<div id="outline-container-org0828358" class="outline-2">
-<h2 id="org0828358"><span class="section-number-2">4.</span> <a href="#org0828358">520</a></h2>
+<div id="outline-container-orgb742f05" class="outline-2">
+<h2 id="orgb742f05"><span class="section-number-2">4.</span> <a href="#orgb742f05">520</a></h2>
 <div class="outline-text-2" id="text-4">
 <p>
 又对了，明天520了（虽然和我莫得关系）。
@@ -106,7 +106,7 @@
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:16</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 12:17</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-23 21:25</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-25 03:07</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2021-05-19.org">content/daily/2021-05-19.org</a></td></tr>
 </table>
