--- a/content/linux/vectored-io.html
+++ b/content/linux/vectored-io.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-23 21:25 -->
+<!-- 2022-10-25 03:07 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Vectored IO</title>
@@ -36,13 +36,13 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org5273889">1. What is Vectored IO</a></li>
-<li><a href="#org2aee4ce">2. Vectored IO in Linux</a></li>
-<li><a href="#org5efe748">3. Comparison with <code>read()</code> &amp; <code>write()</code></a></li>
-<li><a href="#org32c3658">4. Examples</a>
+<li><a href="#org39e3328">1. What is Vectored IO</a></li>
+<li><a href="#orgbfc10c6">2. Vectored IO in Linux</a></li>
+<li><a href="#orgf349926">3. Comparison with <code>read()</code> &amp; <code>write()</code></a></li>
+<li><a href="#org2a5d14a">4. Examples</a>
 <ul>
-<li><a href="#org63a64f7">4.1. <code>write()</code></a></li>
-<li><a href="#org8908504">4.2. <code>writev()</code></a></li>
+<li><a href="#org0ffdb9e">4.1. <code>write()</code></a></li>
+<li><a href="#org41442fa">4.2. <code>writev()</code></a></li>
 </ul>
 </li>
 </ul>
@@ -58,8 +58,8 @@
 <li><a href="https://www.oreilly.com/library/view/linux-system-programming/0596009585/ch04.html#:~:text=fun%20to%20implement.-,readv(%20)%20and%20writev(%20),-POSIX%201003.1%2D2001">Chapter 4. Advanced File I/O &#x2014; Linux System Programming by Robert Love</a></li>
 </ul>
 
-<div id="outline-container-org5273889" class="outline-2">
-<h2 id="org5273889"><span class="section-number-2">1.</span> <a href="#org5273889">What is Vectored IO</a></h2>
+<div id="outline-container-org39e3328" class="outline-2">
+<h2 id="org39e3328"><span class="section-number-2">1.</span> <a href="#org39e3328">What is Vectored IO</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 <i>Vectored IO</i> is doing IO with <b>a vector of buffers</b>, instead of using
@@ -70,8 +70,8 @@ set of buffers.
 </div>
 </div>
 
-<div id="outline-container-org2aee4ce" class="outline-2">
-<h2 id="org2aee4ce"><span class="section-number-2">2.</span> <a href="#org2aee4ce">Vectored IO in Linux</a></h2>
+<div id="outline-container-orgbfc10c6" class="outline-2">
+<h2 id="orgbfc10c6"><span class="section-number-2">2.</span> <a href="#orgbfc10c6">Vectored IO in Linux</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 <code>readv()</code> (scatter input) and <code>writev()</code> (gather output) are Linux
@@ -109,8 +109,8 @@ Each buffer in the <code>iov</code> array is a <code>struct iovec</code>:
 </div>
 </div>
 
-<div id="outline-container-org5efe748" class="outline-2">
-<h2 id="org5efe748"><span class="section-number-2">3.</span> <a href="#org5efe748">Comparison with <code>read()</code> &amp; <code>write()</code></a></h2>
+<div id="outline-container-orgf349926" class="outline-2">
+<h2 id="orgf349926"><span class="section-number-2">3.</span> <a href="#orgf349926">Comparison with <code>read()</code> &amp; <code>write()</code></a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 Traditional <code>read()</code> and <code>write()</code> functions have similar signatures
@@ -127,12 +127,12 @@ only read from <code>buf</code>).
 </div>
 </div>
 
-<div id="outline-container-org32c3658" class="outline-2">
-<h2 id="org32c3658"><span class="section-number-2">4.</span> <a href="#org32c3658">Examples</a></h2>
+<div id="outline-container-org2a5d14a" class="outline-2">
+<h2 id="org2a5d14a"><span class="section-number-2">4.</span> <a href="#org2a5d14a">Examples</a></h2>
 <div class="outline-text-2" id="text-4">
 </div>
-<div id="outline-container-org63a64f7" class="outline-3">
-<h3 id="org63a64f7"><span class="section-number-3">4.1.</span> <a href="#org63a64f7"><code>write()</code></a></h3>
+<div id="outline-container-org0ffdb9e" class="outline-3">
+<h3 id="org0ffdb9e"><span class="section-number-3">4.1.</span> <a href="#org0ffdb9e"><code>write()</code></a></h3>
 <div class="outline-text-3" id="text-4-1">
 <p>
 Printing a message to stdout with <code>write()</code>:
@@ -155,8 +155,8 @@ Printing a message to stdout with <code>write()</code>:
 </div>
 </div>
 
-<div id="outline-container-org8908504" class="outline-3">
-<h3 id="org8908504"><span class="section-number-3">4.2.</span> <a href="#org8908504"><code>writev()</code></a></h3>
+<div id="outline-container-org41442fa" class="outline-3">
+<h3 id="org41442fa"><span class="section-number-3">4.2.</span> <a href="#org41442fa"><code>writev()</code></a></h3>
 <div class="outline-text-3" id="text-4-2">
 <p>
 Splitting the message into 3 separate buffers and printing them to
@@ -197,7 +197,7 @@ stdout with <code>writev()</code>:
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-10-22 16:07</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-22 17:06</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-23 21:25</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-25 03:07</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/linux/vectored-io.org">content/linux/vectored-io.org</a></td></tr>
 </table>
