--- a/content/daily/2021-05-18.html
+++ b/content/daily/2021-05-18.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
-<!-- 2022-10-25 03:07 -->
+<!-- 2022-10-25 16:15 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Hello, 博客</title>
@@ -22,11 +22,21 @@
 <link rel="stylesheet" type="text/css" href="https://unpkg.com/latex.css/style.css">
 <link rel="stylesheet" type="text/css" href="../../css/org-default.css">
 <link rel="stylesheet" type="text/css" href="../../css/style.css">
+<!-- pagefind -->
+<link rel="stylesheet" type="text/css" href="../../_pagefind/pagefind-ui.css">
+<script src="../../_pagefind/pagefind-ui.js" type="text/javascript"></script>
+<script>
+  window.addEventListener('DOMContentLoaded', (event) => {
+      new PagefindUI({element: "#search", showImages: false, resetStyles: false});
+  });
+</script>
 </head>
 <body>
 <div id="preamble" class="status">
 <nav class="org-center">
 <a href="../../index.html">Home</a>
+<div id="search"></div>
+<hr>
 </nav>
 </div>
 <div id="content" class="content">
@@ -54,7 +64,7 @@
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-18 22:19</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 12:17</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-25 03:07</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-25 16:15</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2021-05-18.org">content/daily/2021-05-18.org</a></td></tr>
 </table>
