--- a/content/daily/2021-05-19.html
+++ b/content/daily/2021-05-19.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
-<!-- 2022-10-25 03:07 -->
+<!-- 2022-10-25 16:15 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>不知道要写啥的第二篇日记</title>
@@ -22,31 +22,41 @@
 <link rel="stylesheet" type="text/css" href="https://unpkg.com/latex.css/style.css">
 <link rel="stylesheet" type="text/css" href="../../css/org-default.css">
 <link rel="stylesheet" type="text/css" href="../../css/style.css">
+<!-- pagefind -->
+<link rel="stylesheet" type="text/css" href="../../_pagefind/pagefind-ui.css">
+<script src="../../_pagefind/pagefind-ui.js" type="text/javascript"></script>
+<script>
+  window.addEventListener('DOMContentLoaded', (event) => {
+      new PagefindUI({element: "#search", showImages: false, resetStyles: false});
+  });
+</script>
 </head>
 <body>
 <div id="preamble" class="status">
 <nav class="org-center">
 <a href="../../index.html">Home</a>
+<div id="search"></div>
+<hr>
 </nav>
 </div>
 <div id="content" class="content">
 <header>
 <h1 class="title">不知道要写啥的第二篇日记</h1>
 </header><nav id="table-of-contents" role="doc-toc">
-<h2>Table of Contents</h2>
+<h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org732a74f">1. 一大早</a></li>
-<li><a href="#org590e1e5">2. 然后是剩下的无趣一天🙃</a></li>
-<li><a href="#orgdf7a246">3. 科研训练</a></li>
-<li><a href="#orgb742f05">4. 520</a></li>
+<li><a href="#org48acfcb">1. 一大早</a></li>
+<li><a href="#org5bcfc84">2. 然后是剩下的无趣一天🙃</a></li>
+<li><a href="#org69e3e15">3. 科研训练</a></li>
+<li><a href="#orgd10e3c6">4. 520</a></li>
 </ul>
 </div>
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-org732a74f" class="outline-2">
-<h2 id="org732a74f"><span class="section-number-2">1.</span> <a href="#org732a74f">一大早</a></h2>
+<div id="outline-container-org48acfcb" class="outline-2">
+<h2 id="org48acfcb"><span class="section-number-2">1.</span> <a href="#org48acfcb">一大早</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 概统八点半才上课，现在在宿舍干脆干点啥。 给博客加上了一个
@@ -55,8 +65,8 @@
 </div>
 </div>
 
-<div id="outline-container-org590e1e5" class="outline-2">
-<h2 id="org590e1e5"><span class="section-number-2">2.</span> <a href="#org590e1e5">然后是剩下的无趣一天🙃</a></h2>
+<div id="outline-container-org5bcfc84" class="outline-2">
+<h2 id="org5bcfc84"><span class="section-number-2">2.</span> <a href="#org5bcfc84">然后是剩下的无趣一天🙃</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 下午数电实验，回宿舍了才发现U盘忘拿了……结果一共撑着伞在雨里走了三趟……
@@ -82,8 +92,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgdf7a246" class="outline-2">
-<h2 id="orgdf7a246"><span class="section-number-2">3.</span> <a href="#orgdf7a246">科研训练</a></h2>
+<div id="outline-container-org69e3e15" class="outline-2">
+<h2 id="org69e3e15"><span class="section-number-2">3.</span> <a href="#org69e3e15">科研训练</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 哦对了，下午数电实验结束去找了学长，弄了弄科研训练的事情，大概就是一年弄出篇文章的样子。
@@ -91,8 +101,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgb742f05" class="outline-2">
-<h2 id="orgb742f05"><span class="section-number-2">4.</span> <a href="#orgb742f05">520</a></h2>
+<div id="outline-container-orgd10e3c6" class="outline-2">
+<h2 id="orgd10e3c6"><span class="section-number-2">4.</span> <a href="#orgd10e3c6">520</a></h2>
 <div class="outline-text-2" id="text-4">
 <p>
 又对了，明天520了（虽然和我莫得关系）。
@@ -106,7 +116,7 @@
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:16</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 12:17</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-25 03:07</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-25 16:15</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2021-05-19.org">content/daily/2021-05-19.org</a></td></tr>
 </table>
