--- a/content/daily/2021-05-20.html
+++ b/content/daily/2021-05-20.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
-<!-- 2022-10-25 03:07 -->
+<!-- 2022-10-25 16:15 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>520快乐</title>
@@ -22,23 +22,33 @@
 <link rel="stylesheet" type="text/css" href="https://unpkg.com/latex.css/style.css">
 <link rel="stylesheet" type="text/css" href="../../css/org-default.css">
 <link rel="stylesheet" type="text/css" href="../../css/style.css">
+<!-- pagefind -->
+<link rel="stylesheet" type="text/css" href="../../_pagefind/pagefind-ui.css">
+<script src="../../_pagefind/pagefind-ui.js" type="text/javascript"></script>
+<script>
+  window.addEventListener('DOMContentLoaded', (event) => {
+      new PagefindUI({element: "#search", showImages: false, resetStyles: false});
+  });
+</script>
 </head>
 <body>
 <div id="preamble" class="status">
 <nav class="org-center">
 <a href="../../index.html">Home</a>
+<div id="search"></div>
+<hr>
 </nav>
 </div>
 <div id="content" class="content">
 <header>
 <h1 class="title">520快乐</h1>
 </header><nav id="table-of-contents" role="doc-toc">
-<h2>Table of Contents</h2>
+<h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org0fc0396">1. 水水体育课</a></li>
-<li><a href="#orgee38d40">2. 又是一轮毕业季</a></li>
-<li><a href="#org5724070">3. 520 点灯</a></li>
+<li><a href="#org7cf7588">1. 水水体育课</a></li>
+<li><a href="#org2361506">2. 又是一轮毕业季</a></li>
+<li><a href="#orgdef6017">3. 520 点灯</a></li>
 </ul>
 </div>
 </nav>
@@ -47,8 +57,8 @@
 虽然84我的节日，不过一大早刷着空间还挺欢乐的，就祝我的朋友们快乐叭😃
 </p>
 
-<div id="outline-container-org0fc0396" class="outline-2">
-<h2 id="org0fc0396"><span class="section-number-2">1.</span> <a href="#org0fc0396">水水体育课</a></h2>
+<div id="outline-container-org7cf7588" class="outline-2">
+<h2 id="org7cf7588"><span class="section-number-2">1.</span> <a href="#org7cf7588">水水体育课</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 果然体侧第一天的体育课超级舒服，虽然50米、引体向上啥的测得不咋的，不过挺舒服的，哈哈。还帮一个女生仰卧起坐的时候按腿，快乐😉。
@@ -56,8 +66,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgee38d40" class="outline-2">
-<h2 id="orgee38d40"><span class="section-number-2">2.</span> <a href="#orgee38d40">又是一轮毕业季</a></h2>
+<div id="outline-container-org2361506" class="outline-2">
+<h2 id="org2361506"><span class="section-number-2">2.</span> <a href="#org2361506">又是一轮毕业季</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 今天是本科毕业生拍照，好多人穿着学士服在图书馆前面的草坪和台阶拍照，
@@ -76,8 +86,8 @@
 </div>
 </div>
 
-<div id="outline-container-org5724070" class="outline-2">
-<h2 id="org5724070"><span class="section-number-2">3.</span> <a href="#org5724070">520 点灯</a></h2>
+<div id="outline-container-orgdef6017" class="outline-2">
+<h2 id="orgdef6017"><span class="section-number-2">3.</span> <a href="#orgdef6017">520 点灯</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 简直是去看人的😓
@@ -95,7 +105,7 @@
 偷偷盗一张亦憨的520全图🤫😉
 </p>
 
-<figure id="org3f652b9">
+<figure id="orge6dd36f">
 <img src="./2021-05-20/lights-3.jpg" alt="lights-3.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure>
@@ -107,7 +117,7 @@
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-20 07:51</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-21 09:56</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-25 03:07</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-25 16:15</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2021-05-20.org">content/daily/2021-05-20.org</a></td></tr>
 </table>
