--- a/content/daily/2021-05-23.html
+++ b/content/daily/2021-05-23.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
-<!-- 2022-10-25 03:07 -->
+<!-- 2022-10-25 16:15 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>不造写啥标题</title>
@@ -22,26 +22,36 @@
 <link rel="stylesheet" type="text/css" href="https://unpkg.com/latex.css/style.css">
 <link rel="stylesheet" type="text/css" href="../../css/org-default.css">
 <link rel="stylesheet" type="text/css" href="../../css/style.css">
+<!-- pagefind -->
+<link rel="stylesheet" type="text/css" href="../../_pagefind/pagefind-ui.css">
+<script src="../../_pagefind/pagefind-ui.js" type="text/javascript"></script>
+<script>
+  window.addEventListener('DOMContentLoaded', (event) => {
+      new PagefindUI({element: "#search", showImages: false, resetStyles: false});
+  });
+</script>
 </head>
 <body>
 <div id="preamble" class="status">
 <nav class="org-center">
 <a href="../../index.html">Home</a>
+<div id="search"></div>
+<hr>
 </nav>
 </div>
 <div id="content" class="content">
 <header>
 <h1 class="title">不造写啥标题</h1>
 </header><nav id="table-of-contents" role="doc-toc">
-<h2>Table of Contents</h2>
+<h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org4e4f744">1. 学到了 Emacs - 这次主要是和窗口有关的</a>
+<li><a href="#orgbe23249">1. 学到了 Emacs - 这次主要是和窗口有关的</a>
 <ul>
-<li><a href="#org8fe96b3">1.1. window config &amp; register</a></li>
-<li><a href="#org6ee702a">1.2. <code>C-x 4</code> prefix</a></li>
-<li><a href="#org6b0a990">1.3. ace-window - Quickly switch windows in Emacs</a></li>
-<li><a href="#orgf3d99b2">1.4. winner-mode - Undo &amp; redo window changes</a></li>
+<li><a href="#org7f969c2">1.1. window config &amp; register</a></li>
+<li><a href="#orgd11a97c">1.2. <code>C-x 4</code> prefix</a></li>
+<li><a href="#org17e44fb">1.3. ace-window - Quickly switch windows in Emacs</a></li>
+<li><a href="#org7a57299">1.4. winner-mode - Undo &amp; redo window changes</a></li>
 </ul>
 </li>
 </ul>
@@ -49,12 +59,12 @@
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-org4e4f744" class="outline-2">
-<h2 id="org4e4f744"><span class="section-number-2">1.</span> <a href="#org4e4f744">学到了 Emacs - 这次主要是和窗口有关的</a></h2>
+<div id="outline-container-orgbe23249" class="outline-2">
+<h2 id="orgbe23249"><span class="section-number-2">1.</span> <a href="#orgbe23249">学到了 Emacs - 这次主要是和窗口有关的</a></h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-org8fe96b3" class="outline-3">
-<h3 id="org8fe96b3"><span class="section-number-3">1.1.</span> <a href="#org8fe96b3">window config &amp; register</a></h3>
+<div id="outline-container-org7f969c2" class="outline-3">
+<h3 id="org7f969c2"><span class="section-number-3">1.1.</span> <a href="#org7f969c2">window config &amp; register</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <dl class="org-dl">
 <dt><code>C-x r w</code> (<code>window-configuration-to-register</code>)</dt><dd>Store the window
@@ -68,8 +78,8 @@ restore that frame or all frames accordingly.</dd>
 </div>
 </div>
 
-<div id="outline-container-org6ee702a" class="outline-3">
-<h3 id="org6ee702a"><span class="section-number-3">1.2.</span> <a href="#org6ee702a"><code>C-x 4</code> prefix</a></h3>
+<div id="outline-container-orgd11a97c" class="outline-3">
+<h3 id="orgd11a97c"><span class="section-number-3">1.2.</span> <a href="#orgd11a97c"><code>C-x 4</code> prefix</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <dl class="org-dl">
 <dt><code>C-x 4 f</code>, <code>C-x 4 C-f</code> (<code>find-file-other-window</code>)</dt><dd>Find file by
@@ -92,8 +102,8 @@ log 有关系，8清楚。</dd>
 </div>
 </div>
 
-<div id="outline-container-org6b0a990" class="outline-3">
-<h3 id="org6b0a990"><span class="section-number-3">1.3.</span> <a href="#org6b0a990"><a href="https://github.com/abo-abo/ace-window">ace-window - Quickly switch windows in Emacs</a></a></h3>
+<div id="outline-container-org17e44fb" class="outline-3">
+<h3 id="org17e44fb"><span class="section-number-3">1.3.</span> <a href="#org17e44fb"><a href="https://github.com/abo-abo/ace-window">ace-window - Quickly switch windows in Emacs</a></a></h3>
 <div class="outline-text-3" id="text-1-3">
 <div class="org-src-container">
 <pre class="src src-elisp">(global-set-key (kbd <span style="font-style: italic;">"M-o"</span>) 'ace-window)
@@ -106,8 +116,8 @@ log 有关系，8清楚。</dd>
 </div>
 </div>
 
-<div id="outline-container-orgf3d99b2" class="outline-3">
-<h3 id="orgf3d99b2"><span class="section-number-3">1.4.</span> <a href="#orgf3d99b2"><a href="https://www.emacswiki.org/emacs/WinnerMode">winner-mode - Undo &amp; redo window changes</a></a></h3>
+<div id="outline-container-org7a57299" class="outline-3">
+<h3 id="org7a57299"><span class="section-number-3">1.4.</span> <a href="#org7a57299"><a href="https://www.emacswiki.org/emacs/WinnerMode">winner-mode - Undo &amp; redo window changes</a></a></h3>
 <div class="outline-text-3" id="text-1-4">
 <div class="org-src-container">
 <pre class="src src-elisp">(winner-mode +1)
@@ -126,7 +136,7 @@ log 有关系，8清楚。</dd>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-23 10:20</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 12:17</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-25 03:07</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-25 16:15</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2021-05-23.org">content/daily/2021-05-23.org</a></td></tr>
 </table>
