--- a/content/daily/2022-10-10.html
+++ b/content/daily/2022-10-10.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
-<!-- 2022-10-25 03:07 -->
+<!-- 2022-10-25 16:15 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>念念不忘, 真的有回响吗?</title>
@@ -22,21 +22,31 @@
 <link rel="stylesheet" type="text/css" href="https://unpkg.com/latex.css/style.css">
 <link rel="stylesheet" type="text/css" href="../../css/org-default.css">
 <link rel="stylesheet" type="text/css" href="../../css/style.css">
+<!-- pagefind -->
+<link rel="stylesheet" type="text/css" href="../../_pagefind/pagefind-ui.css">
+<script src="../../_pagefind/pagefind-ui.js" type="text/javascript"></script>
+<script>
+  window.addEventListener('DOMContentLoaded', (event) => {
+      new PagefindUI({element: "#search", showImages: false, resetStyles: false});
+  });
+</script>
 </head>
 <body>
 <div id="preamble" class="status">
 <nav class="org-center">
 <a href="../../index.html">Home</a>
+<div id="search"></div>
+<hr>
 </nav>
 </div>
 <div id="content" class="content">
 <header>
 <h1 class="title">念念不忘, 真的有回响吗?</h1>
 </header><nav id="table-of-contents" role="doc-toc">
-<h2>Table of Contents</h2>
+<h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgb607942">1. Concat Images</a></li>
+<li><a href="#orga82e6b4">1. Concat Images</a></li>
 </ul>
 </div>
 </nav>
@@ -46,28 +56,28 @@
 </p>
 
 
-<figure id="org4d6b9ab">
+<figure id="orgcdda76f">
 <img src="2022-10-10/1.jpg" alt="1.jpg" width="40%" style="margin-left: auto; margin-right: auto;">
 
-<figcaption><span class="figure-number">Figure 1: </span>还愿</figcaption>
+<figcaption><span class="figure-number">&#22270;1&nbsp; </span>还愿</figcaption>
 </figure>
 
 
-<figure id="org39d2f5a">
+<figure id="orgdf737ca">
 <img src="2022-10-10/2.jpg" alt="2.jpg" width="40%" style="margin-left: auto; margin-right: auto;">
 
-<figcaption><span class="figure-number">Figure 2: </span>起因</figcaption>
+<figcaption><span class="figure-number">&#22270;2&nbsp; </span>起因</figcaption>
 </figure>
 
 
-<figure id="orgf4f1bc9">
+<figure id="orge7f3aab">
 <img src="2022-10-10/3.jpg" alt="3.jpg" width="40%" style="margin-left: auto; margin-right: auto;">
 
-<figcaption><span class="figure-number">Figure 3: </span>结果</figcaption>
+<figcaption><span class="figure-number">&#22270;3&nbsp; </span>结果</figcaption>
 </figure>
 
-<div id="outline-container-orgb607942" class="outline-2">
-<h2 id="orgb607942"><span class="section-number-2">1.</span> <a href="#orgb607942">Concat Images</a></h2>
+<div id="outline-container-orga82e6b4" class="outline-2">
+<h2 id="orga82e6b4"><span class="section-number-2">1.</span> <a href="#orga82e6b4">Concat Images</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 woc学到一个很方便的东西<sup><a id="fnr.1" class="footref" href="#fn.1" role="doc-backlink">1</a></sup>, <code>convert</code> yyds!
@@ -82,7 +92,7 @@ convert image1.png image2.png +append result.png
 </div>
 </div>
 <div id="footnotes">
-<h2 class="footnotes">Footnotes: </h2>
+<h2 class="footnotes">&#33050;&#27880;: </h2>
 <div id="text-footnotes">
 
 <div class="footdef"><sup><a id="fn.1" class="footnum" href="#fnr.1" role="doc-backlink">1</a></sup> <div class="footpara" role="doc-footnote"><p class="footpara">
@@ -97,7 +107,7 @@ convert image1.png image2.png +append result.png
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-10-10 12:22</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 12:40</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-25 03:07</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-25 16:15</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2022-10-10.org">content/daily/2022-10-10.org</a></td></tr>
 </table>
