--- a/content/qq-group-export.html
+++ b/content/qq-group-export.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
-<!-- 2022-10-25 03:07 -->
+<!-- 2022-10-25 16:15 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>导出QQ群成员</title>
@@ -22,29 +22,39 @@
 <link rel="stylesheet" type="text/css" href="https://unpkg.com/latex.css/style.css">
 <link rel="stylesheet" type="text/css" href="../css/org-default.css">
 <link rel="stylesheet" type="text/css" href="../css/style.css">
+<!-- pagefind -->
+<link rel="stylesheet" type="text/css" href="../_pagefind/pagefind-ui.css">
+<script src="../_pagefind/pagefind-ui.js" type="text/javascript"></script>
+<script>
+  window.addEventListener('DOMContentLoaded', (event) => {
+      new PagefindUI({element: "#search", showImages: false, resetStyles: false});
+  });
+</script>
 </head>
 <body>
 <div id="preamble" class="status">
 <nav class="org-center">
 <a href="../index.html">Home</a>
+<div id="search"></div>
+<hr>
 </nav>
 </div>
 <div id="content" class="content">
 <header>
 <h1 class="title">导出QQ群成员</h1>
 </header><nav id="table-of-contents" role="doc-toc">
-<h2>Table of Contents</h2>
+<h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org9465532">1. 导出成员</a></li>
-<li><a href="#orgab05a61">2. 交叉对比</a></li>
+<li><a href="#org12b0702">1. 导出成员</a></li>
+<li><a href="#org5f05206">2. 交叉对比</a></li>
 </ul>
 </div>
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-org9465532" class="outline-2">
-<h2 id="org9465532"><span class="section-number-2">1.</span> <a href="#org9465532">导出成员</a></h2>
+<div id="outline-container-org12b0702" class="outline-2">
+<h2 id="org12b0702"><span class="section-number-2">1.</span> <a href="#org12b0702">导出成员</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 来自: <a href="https://www.zhihu.com/question/58753010/answer/1354673772">如何批量导出QQ群成员的QQ号/QQ邮箱等相关信息？ - 大发撸卡的回答 - 知乎</a>
@@ -72,8 +82,8 @@ console.log(t);
 </div>
 </div>
 
-<div id="outline-container-orgab05a61" class="outline-2">
-<h2 id="orgab05a61"><span class="section-number-2">2.</span> <a href="#orgab05a61">交叉对比</a></h2>
+<div id="outline-container-org5f05206" class="outline-2">
+<h2 id="org5f05206"><span class="section-number-2">2.</span> <a href="#org5f05206">交叉对比</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 交叉对比两个群的QQ号:
@@ -94,7 +104,7 @@ console.log(t);
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-29 16:05</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 16:09</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-25 03:07</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-25 16:15</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/qq-group-export.org">content/qq-group-export.org</a></td></tr>
 </table>
